Add public product listing API and storefront experience