@@ -8,28 +8,44 @@ import com.example.rbac.checkout.dto.OrderLineDto;
 import com.example.rbac.checkout.dto.OrderListItemDto;
 import com.example.rbac.checkout.dto.OrderSummaryDto;
 import com.example.rbac.checkout.dto.PaymentMethodDto;
+import com.example.rbac.checkout.model.CheckoutOrder;
+import com.example.rbac.checkout.repository.CheckoutOrderRepository;
 import com.example.rbac.common.exception.ApiException;
+import com.fasterxml.jackson.core.JsonProcessingException;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 import org.springframework.http.HttpStatus;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
+import org.springframework.util.CollectionUtils;
+import org.springframework.util.StringUtils;
 
 import java.math.BigDecimal;
 import java.math.RoundingMode;
-import java.time.Instant;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
-import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
 
 @Service
 public class OrderService {
 
+    private static final Logger log = LoggerFactory.getLogger(OrderService.class);
     private static final String DEFAULT_STATUS = "PROCESSING";
+    private static final TypeReference<List<OrderLineDto>> ORDER_LINE_LIST = new TypeReference<>() {
+    };
 
-    private final AtomicLong orderSequence = new AtomicLong(1000L);
-    private final List<OrderRecord> orders = Collections.synchronizedList(new ArrayList<>());
+    private final CheckoutOrderRepository orderRepository;
+    private final ObjectMapper objectMapper;
 
+    public OrderService(CheckoutOrderRepository orderRepository, ObjectMapper objectMapper) {
+        this.orderRepository = orderRepository;
+        this.objectMapper = objectMapper;
+    }
+
+    @Transactional
     public CheckoutOrderResponse createOrder(Long userId,
                                              String customerEmail,
                                              String customerName,
@@ -38,87 +54,137 @@ public class OrderService {
                                              PaymentMethodDto paymentMethod,
                                              OrderSummaryDto summary,
                                              List<CheckoutOrderLineRequest> lineRequests) {
-        Instant now = Instant.now();
-        OrderRecord record = new OrderRecord();
-        record.id = orderSequence.getAndIncrement();
-        record.orderNumber = "ORD-" + record.id;
-        record.userId = userId;
-        record.customerName = customerName;
-        record.customerEmail = customerEmail;
-        record.shippingAddress = copyAddress(shippingAddress);
-        record.billingAddress = copyAddress(billingAddress);
-        record.paymentMethod = copyPaymentMethod(paymentMethod);
-        record.summary = copySummary(summary);
-        record.createdAt = now;
-        record.lines = toOrderLines(lineRequests);
-        record.status = DEFAULT_STATUS;
-        orders.add(record);
+        List<OrderLineDto> orderLines = toOrderLines(lineRequests);
+        CheckoutOrder order = new CheckoutOrder();
+        order.setUserId(userId);
+        order.setCustomerEmail(customerEmail);
+        order.setCustomerName(customerName);
+        order.setStatus(DEFAULT_STATUS);
+        order.setSummaryJson(writeJson(copySummary(summary)));
+        order.setShippingAddressJson(writeJson(copyAddress(shippingAddress)));
+        order.setBillingAddressJson(writeJson(copyAddress(billingAddress)));
+        order.setPaymentMethodJson(writeJson(copyPaymentMethod(paymentMethod)));
+        order.setLinesJson(writeJson(orderLines));
 
+        CheckoutOrder saved = orderRepository.save(order);
+        if (!StringUtils.hasText(saved.getOrderNumber()) && saved.getId() != null) {
+            saved.setOrderNumber(generateOrderNumber(saved.getId()));
+            saved = orderRepository.save(saved);
+        }
+        return toOrderResponse(saved);
+    }
+
+    @Transactional(readOnly = true)
+    public List<OrderListItemDto> listOrders() {
+        List<CheckoutOrder> orders = orderRepository.findAllByOrderByCreatedAtDesc();
+        if (CollectionUtils.isEmpty(orders)) {
+            return List.of();
+        }
+        List<OrderListItemDto> results = new ArrayList<>();
+        for (CheckoutOrder order : orders) {
+            results.add(toListItem(order));
+        }
+        return results;
+    }
+
+    @Transactional(readOnly = true)
+    public List<OrderListItemDto> listOrdersForUser(Long userId) {
+        List<CheckoutOrder> orders = orderRepository.findByUserIdOrderByCreatedAtDesc(userId);
+        if (CollectionUtils.isEmpty(orders)) {
+            return List.of();
+        }
+        List<OrderListItemDto> results = new ArrayList<>();
+        for (CheckoutOrder order : orders) {
+            results.add(toListItem(order));
+        }
+        return results;
+    }
+
+    @Transactional(readOnly = true)
+    public OrderDetailDto getOrder(Long orderId) {
+        CheckoutOrder order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Order not found"));
+        return toDetail(order);
+    }
+
+    @Transactional(readOnly = true)
+    public OrderDetailDto getOrderForUser(Long userId, Long orderId) {
+        CheckoutOrder order = orderRepository.findById(orderId)
+                .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Order not found"));
+        if (!Objects.equals(order.getUserId(), userId)) {
+            throw new ApiException(HttpStatus.NOT_FOUND, "Order not found");
+        }
+        return toDetail(order);
+    }
+
+    private CheckoutOrderResponse toOrderResponse(CheckoutOrder order) {
         CheckoutOrderResponse response = new CheckoutOrderResponse();
-        response.setOrderId(record.id);
-        response.setOrderNumber(record.orderNumber);
-        response.setSummary(copySummary(record.summary));
-        response.setCreatedAt(now);
-        response.setLines(copyLines(record.lines));
-        response.setShippingAddress(copyAddress(record.shippingAddress));
-        response.setBillingAddress(copyAddress(record.billingAddress));
-        response.setPaymentMethod(copyPaymentMethod(record.paymentMethod));
-        response.setStatus(record.status);
-        response.setCustomerId(record.userId);
-        response.setCustomerName(record.customerName);
-        response.setCustomerEmail(record.customerEmail);
+        response.setOrderId(order.getId());
+        response.setOrderNumber(ensureOrderNumber(order));
+        response.setStatus(order.getStatus());
+        response.setCustomerId(order.getUserId());
+        response.setCustomerEmail(order.getCustomerEmail());
+        response.setCustomerName(order.getCustomerName());
+        response.setCreatedAt(order.getCreatedAt());
+        response.setSummary(copySummary(readSummary(order.getSummaryJson())));
+        List<OrderLineDto> lines = readLines(order.getLinesJson());
+        response.setLines(copyLines(lines));
+        response.setShippingAddress(copyAddress(readAddress(order.getShippingAddressJson())));
+        response.setBillingAddress(copyAddress(readAddress(order.getBillingAddressJson())));
+        response.setPaymentMethod(copyPaymentMethod(readPaymentMethod(order.getPaymentMethodJson())));
         return response;
     }
 
-    public List<OrderListItemDto> listOrders() {
-        List<OrderListItemDto> results = new ArrayList<>();
-        synchronized (orders) {
-            for (OrderRecord record : orders) {
-                results.add(toListItem(record));
-            }
-        }
-        return results;
+    private OrderListItemDto toListItem(CheckoutOrder order) {
+        OrderListItemDto dto = new OrderListItemDto();
+        dto.setId(order.getId());
+        dto.setOrderNumber(ensureOrderNumber(order));
+        dto.setCustomerId(order.getUserId());
+        dto.setCustomerName(order.getCustomerName());
+        dto.setCustomerEmail(order.getCustomerEmail());
+        dto.setStatus(order.getStatus());
+        dto.setCreatedAt(order.getCreatedAt());
+        dto.setSummary(copySummary(readSummary(order.getSummaryJson())));
+        dto.setLines(copyLines(readLines(order.getLinesJson())));
+        return dto;
     }
 
-    public List<OrderListItemDto> listOrdersForUser(Long userId) {
-        List<OrderListItemDto> results = new ArrayList<>();
-        synchronized (orders) {
-            for (OrderRecord record : orders) {
-                if (Objects.equals(record.userId, userId)) {
-                    results.add(toListItem(record));
-                }
-            }
-        }
-        return results;
-    }
-
-    public OrderDetailDto getOrder(Long orderId) {
-        OrderRecord record = findOrder(orderId);
-        return toOrderDetail(record);
-    }
-
-    public OrderDetailDto getOrderForUser(Long userId, Long orderId) {
-        OrderRecord record = findOrder(orderId);
-        if (!Objects.equals(record.userId, userId)) {
-            throw new ApiException(HttpStatus.NOT_FOUND, "Order not found");
-        }
-        return toOrderDetail(record);
+    private OrderDetailDto toDetail(CheckoutOrder order) {
+        OrderDetailDto detail = new OrderDetailDto();
+        detail.setId(order.getId());
+        detail.setOrderNumber(ensureOrderNumber(order));
+        detail.setStatus(order.getStatus());
+        detail.setCreatedAt(order.getCreatedAt());
+        detail.setCustomerId(order.getUserId());
+        detail.setCustomerName(order.getCustomerName());
+        detail.setCustomerEmail(order.getCustomerEmail());
+        detail.setShippingAddress(copyAddress(readAddress(order.getShippingAddressJson())));
+        detail.setBillingAddress(copyAddress(readAddress(order.getBillingAddressJson())));
+        detail.setPaymentMethod(copyPaymentMethod(readPaymentMethod(order.getPaymentMethodJson())));
+        detail.setSummary(copySummary(readSummary(order.getSummaryJson())));
+        detail.setLines(copyLines(readLines(order.getLinesJson())));
+        return detail;
     }
 
     private List<OrderLineDto> toOrderLines(List<CheckoutOrderLineRequest> lineRequests) {
-        if (lineRequests == null || lineRequests.isEmpty()) {
+        if (CollectionUtils.isEmpty(lineRequests)) {
             return List.of();
         }
-        return lineRequests.stream()
-                .filter(line -> line != null && line.getQuantity() != null && line.getQuantity() > 0)
-                .map(this::toOrderLineDto)
-                .collect(Collectors.toList());
+        List<OrderLineDto> lines = new ArrayList<>();
+        for (CheckoutOrderLineRequest request : lineRequests) {
+            if (request == null || request.getQuantity() == null || request.getQuantity() <= 0) {
+                continue;
+            }
+            lines.add(toOrderLineDto(request));
+        }
+        return lines;
     }
 
     private OrderLineDto toOrderLineDto(CheckoutOrderLineRequest line) {
         OrderLineDto dto = new OrderLineDto();
         dto.setProductId(line.getProductId());
         dto.setName(line.getName());
+        dto.setProductSlug(line.getProductSlug());
         dto.setQuantity(line.getQuantity());
         BigDecimal unitPrice = line.getUnitPrice() != null ? line.getUnitPrice() : BigDecimal.ZERO;
         dto.setUnitPrice(unitPrice.setScale(2, RoundingMode.HALF_UP));
@@ -128,40 +194,6 @@ public class OrderService {
             dto.setTaxRate(line.getTaxRate());
         }
         return dto;
-    }
-
-    private List<OrderLineDto> copyLines(List<OrderLineDto> lines) {
-        if (lines == null || lines.isEmpty()) {
-            return List.of();
-        }
-        return lines.stream()
-                .map(line -> {
-                    OrderLineDto copy = new OrderLineDto();
-                    copy.setProductId(line.getProductId());
-                    copy.setName(line.getName());
-                    copy.setQuantity(line.getQuantity());
-                    copy.setUnitPrice(line.getUnitPrice());
-                    copy.setLineTotal(line.getLineTotal());
-                    copy.setTaxRate(line.getTaxRate());
-                    return copy;
-                })
-                .collect(Collectors.toList());
-    }
-
-    private OrderSummaryDto copySummary(OrderSummaryDto summary) {
-        if (summary == null) {
-            return null;
-        }
-        OrderSummaryDto copy = new OrderSummaryDto();
-        copy.setProductTotal(summary.getProductTotal());
-        copy.setTaxTotal(summary.getTaxTotal());
-        copy.setShippingTotal(summary.getShippingTotal());
-        copy.setGrandTotal(summary.getGrandTotal());
-        copy.setDiscountTotal(summary.getDiscountTotal());
-        copy.setShippingBreakdown(summary.getShippingBreakdown());
-        copy.setTaxLines(summary.getTaxLines() != null ? new ArrayList<>(summary.getTaxLines()) : List.of());
-        copy.setAppliedCoupon(summary.getAppliedCoupon());
-        return copy;
     }
 
     private CheckoutAddressDto copyAddress(CheckoutAddressDto source) {
@@ -201,58 +233,123 @@ public class OrderService {
         return copy;
     }
 
-    private OrderRecord findOrder(Long orderId) {
-        synchronized (orders) {
-            return orders.stream()
-                    .filter(record -> Objects.equals(record.id, orderId))
-                    .findFirst()
-                    .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "Order not found"));
+    private OrderSummaryDto copySummary(OrderSummaryDto summary) {
+        if (summary == null) {
+            return null;
+        }
+        OrderSummaryDto copy = new OrderSummaryDto();
+        copy.setProductTotal(summary.getProductTotal());
+        copy.setTaxTotal(summary.getTaxTotal());
+        copy.setShippingTotal(summary.getShippingTotal());
+        copy.setGrandTotal(summary.getGrandTotal());
+        copy.setDiscountTotal(summary.getDiscountTotal());
+        copy.setShippingBreakdown(summary.getShippingBreakdown());
+        copy.setTaxLines(summary.getTaxLines() != null ? new ArrayList<>(summary.getTaxLines()) : List.of());
+        copy.setAppliedCoupon(summary.getAppliedCoupon());
+        return copy;
+    }
+
+    private List<OrderLineDto> copyLines(List<OrderLineDto> lines) {
+        if (CollectionUtils.isEmpty(lines)) {
+            return List.of();
+        }
+        List<OrderLineDto> copies = new ArrayList<>(lines.size());
+        for (OrderLineDto line : lines) {
+            if (line == null) {
+                continue;
+            }
+            OrderLineDto copy = new OrderLineDto();
+            copy.setProductId(line.getProductId());
+            copy.setName(line.getName());
+            copy.setProductSlug(line.getProductSlug());
+            copy.setQuantity(line.getQuantity());
+            copy.setUnitPrice(line.getUnitPrice());
+            copy.setLineTotal(line.getLineTotal());
+            copy.setTaxRate(line.getTaxRate());
+            copies.add(copy);
+        }
+        return copies;
+    }
+
+    private OrderSummaryDto readSummary(String json) {
+        if (!StringUtils.hasText(json)) {
+            return null;
+        }
+        try {
+            return objectMapper.readValue(json, OrderSummaryDto.class);
+        } catch (JsonProcessingException ex) {
+            log.warn("Unable to deserialize order summary: {}", ex.getMessage());
+            return null;
         }
     }
 
-    private OrderDetailDto toOrderDetail(OrderRecord record) {
-        OrderDetailDto detail = new OrderDetailDto();
-        detail.setId(record.id);
-        detail.setOrderNumber(record.orderNumber);
-        detail.setStatus(record.status);
-        detail.setCreatedAt(record.createdAt);
-        detail.setCustomerId(record.userId);
-        detail.setCustomerName(record.customerName);
-        detail.setCustomerEmail(record.customerEmail);
-        detail.setShippingAddress(copyAddress(record.shippingAddress));
-        detail.setBillingAddress(copyAddress(record.billingAddress));
-        detail.setPaymentMethod(copyPaymentMethod(record.paymentMethod));
-        detail.setSummary(copySummary(record.summary));
-        detail.setLines(copyLines(record.lines));
-        return detail;
+    private CheckoutAddressDto readAddress(String json) {
+        if (!StringUtils.hasText(json)) {
+            return null;
+        }
+        try {
+            return objectMapper.readValue(json, CheckoutAddressDto.class);
+        } catch (JsonProcessingException ex) {
+            log.warn("Unable to deserialize order address: {}", ex.getMessage());
+            return null;
+        }
     }
 
-    private OrderListItemDto toListItem(OrderRecord record) {
-        OrderListItemDto dto = new OrderListItemDto();
-        dto.setId(record.id);
-        dto.setOrderNumber(record.orderNumber);
-        dto.setCustomerId(record.userId);
-        dto.setCustomerName(record.customerName);
-        dto.setCustomerEmail(record.customerEmail);
-        dto.setStatus(record.status);
-        dto.setSummary(copySummary(record.summary));
-        dto.setCreatedAt(record.createdAt);
-        dto.setLines(copyLines(record.lines));
-        return dto;
+    private PaymentMethodDto readPaymentMethod(String json) {
+        if (!StringUtils.hasText(json)) {
+            return null;
+        }
+        try {
+            return objectMapper.readValue(json, PaymentMethodDto.class);
+        } catch (JsonProcessingException ex) {
+            log.warn("Unable to deserialize payment method: {}", ex.getMessage());
+            return null;
+        }
     }
 
-    private static final class OrderRecord {
-        private Long id;
-        private String orderNumber;
-        private Long userId;
-        private String customerName;
-        private String customerEmail;
-        private CheckoutAddressDto shippingAddress;
-        private CheckoutAddressDto billingAddress;
-        private PaymentMethodDto paymentMethod;
-        private OrderSummaryDto summary;
-        private Instant createdAt;
-        private List<OrderLineDto> lines = List.of();
-        private String status;
+    private List<OrderLineDto> readLines(String json) {
+        if (!StringUtils.hasText(json)) {
+            return Collections.emptyList();
+        }
+        try {
+            return objectMapper.readValue(json, ORDER_LINE_LIST);
+        } catch (JsonProcessingException ex) {
+            log.warn("Unable to deserialize order lines: {}", ex.getMessage());
+            return Collections.emptyList();
+        }
+    }
+
+    private String writeJson(Object value) {
+        if (value == null) {
+            return null;
+        }
+        try {
+            return objectMapper.writeValueAsString(value);
+        } catch (JsonProcessingException ex) {
+            throw new IllegalStateException("Unable to serialize order payload", ex);
+        }
+    }
+
+    private String ensureOrderNumber(CheckoutOrder order) {
+        if (order == null) {
+            return null;
+        }
+        if (StringUtils.hasText(order.getOrderNumber())) {
+            return order.getOrderNumber();
+        }
+        if (order.getId() == null) {
+            return null;
+        }
+        String generated = generateOrderNumber(order.getId());
+        order.setOrderNumber(generated);
+        orderRepository.save(order);
+        return generated;
+    }
+
+    private String generateOrderNumber(Long id) {
+        long sequenceBase = 999L;
+        long numeric = (id != null ? id : 0L) + sequenceBase;
+        return "ORD-" + numeric;
     }
 }
+
